# Diplom

./: .gitignore  .gitignore.txt  Diplom.sln  alembic.ini  pyproject.toml  render_build.sh  requirements.txt
Diplom/: App.py  Diplom.pyproj  app.py  config.py  forms.py  models.py  utils.py
Diplom/migrations/: env.py
Diplom/templates/: analytics.html  auth.html  base.html  budget.html  categories.html  dashboard.html  home.html  tips.html  transactions.html
Diplom/templates/modals/: login_modal.html  register_modal.html
migrations/: env.py
migrations/versions/: .gitkeep  0d9c74bb5cd3_initial_migration.py  66b382eca5db_initial_migration.py
