[tool.poetry]
name = "diplom"
version = "0.1.0"
description = "Diplom Flask app for Render"
authors = ["Твоё Имя <email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
flask-login = "^0.6.3"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.2"
flask-cors = "^5.0.1"
flask-migrate = "^4.1.0"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.10"
email-validator = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
